fix problems raised by sonar